sumo/tests/sumo/extended/rerouter/errors/xml/destprob_no_end/vehroutes.sumo
<?xml version="1.0"?>

<!-- generated on 07/22/08 10:37:43 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>three_split.net.xml</net-file>
      <additional-files>input_routes.rou.xml,input_additional.add.xml</additional-files>
   </input>

   <output>
      <vehroute-output>vehroutes.xml</vehroute-output>
   </output>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<routes>
</routes>
